--- a/src/app/intranet/calendario/calendario.component.html
+++ b/src/app/intranet/calendario/calendario.component.html
@@ -1,22 +1,12 @@
 <div class='demo-app'>
   <div class='demo-app-sidebar'>
     <div class='demo-app-sidebar-section'>
-      <h2>Instructions</h2>
+      <h2>Instrucciones</h2>
       <ul>
-        <li>Select dates and you will be prompted to create a new event</li>
-        <li>Drag, drop, and resize events</li>
-        <li>Click an event to delete it</li>
+        <li>Seleccione las fechas y se le pedirá que cree un nuevo evento</li>
+        <li>Eventos de arrastrar, soltar y redimensionar</li>
+        <li>Haz clic en un evento para eliminarlo</li>
       </ul>
-    </div>
-    <div class='demo-app-sidebar-section'>
-      <label>
-        <input
-          type='checkbox'
-          [checked]='calendarVisible'
-          (change)='handleCalendarToggle()'
-        />
-        toggle whole calendar
-      </label>
     </div>
     <div class='demo-app-sidebar-section'>
       <label>
@@ -25,11 +15,11 @@
           [checked]='calendarOptions.weekends'
           (change)='handleWeekendsToggle()'
         />
-        toggle weekends
+        alternar fines de semana
       </label>
     </div>
     <div class='demo-app-sidebar-section'>
-      <h2>All Events ({{currentEvents.length}})</h2>
+      <h2>Todos los eventos ({{currentEvents.length}})</h2>
       <ul>
         <li *ngFor='let event of currentEvents'>
           <b>{{event.startStr}}</b>
