--- a/src/app/authentication/login-register/login-register.component.html
+++ b/src/app/authentication/login-register/login-register.component.html
@@ -1,130 +1,89 @@
-
 <app-navbar-principal></app-navbar-principal>
 
 <div class="section">
-    <div class="container">
-      <div class="row full-height justify-content-center">
-        <div class="col-12 text-center align-self-center py-5">
-          <div class="section pb-5 pt-5 pt-sm-2 text-center">
-            <h6 class="mb-0 pb-3">
-              <span>Iniciar Sesión</span>
-              <span>Registrarse</span>
-            </h6>
-            <input class="checkbox" type="checkbox" id="reg-log" name="reg-log" (change)="switchMode()"/>
-            <label for="reg-log"></label>
+  <div class="container">
+    <div class="row full-height justify-content-center">
+      <div class="col-12 text-center align-self-center py-5">
+        <div class="section pb-5 pt-5 pt-sm-2 text-center">
+          <h6 class="mb-0 pb-3">
+            <span>Iniciar Sesión</span>
+            <span>Registrarse</span>
+          </h6>
+          <input class="checkbox" type="checkbox" id="reg-log" name="reg-log" (change)="switchMode()" />
+          <label for="reg-log"></label>
 
-            <div class="card-3d-wrap mx-auto">
-              <div class="card-3d-wrapper">
+          <div class="card-3d-wrap mx-auto">
+            <div class="card-3d-wrapper">
 
-                <!-- Formulario de Login -->
-                <div class="card-front" *ngIf="isLoginMode">
-                  <div class="center-wrap">
-                    <div class="section text-center">
-                      <h4 class="mb-4 pb-3">Iniciar Sesión</h4>
-                      <div class="form-group">
-                        <input
-                          type="text"
-                          class="form-style"
-                          placeholder="Usuario"
-                          [(ngModel)]="loginData.username"
-                        />
-                        <i class="input-icon uil uil-user-check"></i>
-                      </div>
-                      <div class="form-group mt-2">
-                        <input
-                          type="password"
-                          class="form-style"
-                          placeholder="Contraseña"
-                          [(ngModel)]="loginData.password"
-                        />
-                        <i class="input-icon uil uil-lock-alt"></i>
-                      </div>
-                      <button class="btn mt-4" (click)="onLogin()">Iniciar Sesión</button>
+              <!-- Formulario de Login -->
+              <div class="card-front" *ngIf="isLoginMode">
+                <div class="center-wrap">
+                  <div class="section text-center">
+                    <h4 class="mb-4 pb-3">Iniciar Sesión</h4>
+                    <div class="form-group">
+                      <input type="text" class="form-style" placeholder="Usuario" [(ngModel)]="loginData.username"
+                        (keydown)="onKeyDown($event)" />
+                      <i class="input-icon uil uil-user-check"></i>
                     </div>
+                    <div class="form-group mt-2">
+                      <input type="password" class="form-style" placeholder="Contraseña"
+                        [(ngModel)]="loginData.password" (keydown)="onKeyDown($event)" />
+                      <i class="input-icon uil uil-lock-alt"></i>
+                    </div>
+                    <button class="btn mt-4" (click)="onLogin()">Iniciar Sesión</button>
                   </div>
                 </div>
-
-                <!-- Formulario de Registro -->
-                <div class="card-back" *ngIf="!isLoginMode">
-                  <div class="center-wrap">
-                    <div class="section text-center">
-                      <h4 class="mb-3 pb-3">Crear Cuenta</h4>
-                      <div class="form-group mb-2 pr-4" style="display: flex;">
-                        <input
-                          type="text"
-                          class="form-style"
-                          placeholder="Apellidos"
-                          [(ngModel)]="registerData.apellido"
-                        />
-                        <i class="input-icon uil uil-user"></i>
-                        <input
-                          type="text"
-                          class="form-style "
-                          placeholder="Nombres"
-                          [(ngModel)]="registerData.nombre"
-                        />
-                        <i class="input-icon uil uil-user" style="position: absolute; left: 200px;"></i>
-                      </div>
-
-                      <div class="form-group" style="display: flex;">
-                        <input
-                          type="tel"
-                          class="form-style"
-                          placeholder="Teléfono"
-                          [(ngModel)]="registerData.telefono"
-                        />
-                        <i class="input-icon uil uil-phone"></i>
-                        <input
-                          type="text"
-                          class="form-style"
-                          placeholder="DNI"
-                          [(ngModel)]="registerData.dni"
-                        />
-                        <i class="input-icon uil uil-postcard" style="position: absolute; left: 200px;"></i>
-                      </div>
-
-                      <div class="form-group mt-2">
-                        <input
-                          type="email"
-                          class="form-style"
-                          placeholder="Correo"
-                          [(ngModel)]="registerData.correo"
-                        />
-                        <i class="input-icon uil uil-at"></i>
-                      </div>
-
-                      <div class="form-group mt-2">
-                        <input
-                          type="text"
-                          class="form-style"
-                          placeholder="Usuario"
-                          [(ngModel)]="registerData.username"
-                        />
-                        <i class="input-icon uil uil-user-check"></i>
-                      </div>
-
-                      <div class="form-group mt-2">
-                        <input
-                          type="password"
-                          class="form-style"
-                          placeholder="Contraseña"
-                          [(ngModel)]="registerData.password"
-                        />
-                        <i class="input-icon uil uil-unlock"></i>
-                      </div>
-
-                      <button class="btn mt-4" (click)="onRegister()">Registrarse</button>
-                    </div>
-                  </div>
-                </div>
-
               </div>
+
+
+              <!-- Formulario de Registro -->
+              <div class="card-back" *ngIf="!isLoginMode">
+                <div class="center-wrap">
+                  <div class="section text-center">
+                    <h4 class="mb-3 pb-3">Crear Cuenta</h4>
+                    <div class="form-group mb-2 pr-4" style="display: flex;">
+                      <input type="text" class="form-style" placeholder="Apellidos"
+                        [(ngModel)]="registerData.apellido" />
+                      <i class="input-icon uil uil-user"></i>
+                      <input type="text" class="form-style " placeholder="Nombres" [(ngModel)]="registerData.nombre" />
+                      <i class="input-icon uil uil-user" style="position: absolute; left: 200px;"></i>
+                    </div>
+
+                    <div class="form-group" style="display: flex;">
+                      <input type="tel" class="form-style" placeholder="Teléfono" [(ngModel)]="registerData.telefono" />
+                      <i class="input-icon uil uil-phone"></i>
+                      <input type="text" class="form-style" placeholder="DNI" [(ngModel)]="registerData.dni" />
+                      <i class="input-icon uil uil-postcard" style="position: absolute; left: 200px;"></i>
+                    </div>
+
+                    <div class="form-group mt-2">
+                      <input type="email" class="form-style" placeholder="Correo" [(ngModel)]="registerData.correo" />
+                      <i class="input-icon uil uil-at"></i>
+                    </div>
+
+                    <div class="form-group mt-2">
+                      <input type="text" class="form-style" placeholder="Usuario" [(ngModel)]="registerData.username" />
+                      <i class="input-icon uil uil-user-check"></i>
+                    </div>
+
+                    <div class="form-group mt-2">
+                      <input type="password" class="form-style" placeholder="Contraseña"
+                        [(ngModel)]="registerData.password" />
+                      <i class="input-icon uil uil-unlock"></i>
+                    </div>
+
+                    <button class="btn mt-4" (click)="onRegister()">Registrarse</button>
+                  </div>
+                </div>
+              </div>
+
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
 
 
-  <app-footer></app-footer>
+<app-footer></app-footer>
