--- a/src/app/intranet/r-mascota/r-mascota.component.html
+++ b/src/app/intranet/r-mascota/r-mascota.component.html
@@ -1,77 +1,81 @@
 <div class="container mt-4">
-    <div class="row">
-      <div class="col-md-6">
-        <mat-card>
-          <mat-card-header>
-            <mat-card-title>Registrar Mascota</mat-card-title>
-          </mat-card-header>
-          <mat-card-content>
-            <form [formGroup]="mascotaForm" (ngSubmit)="registrarMascota()">
-              <div class="form-group">
-                <mat-form-field class="w-100">
-                  <mat-label>Nombre de la mascota</mat-label>
-                  <input matInput formControlName="nombreMascota">
-                </mat-form-field>
-              </div>
-              <div class="form-group">
-                <mat-form-field class="w-100">
-                  <mat-label>Fecha de Nacimiento</mat-label>
-                  <input matInput [matDatepicker]="picker" formControlName="fechaNacimiento">
-                  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                  <mat-datepicker #picker></mat-datepicker>
-                </mat-form-field>
-              </div>
-              <div class="form-group">
-                <mat-form-field class="w-100">
-                  <mat-label>Peso (kg)</mat-label>
-                  <input type="number" matInput formControlName="peso">
-                </mat-form-field>
-              </div>
-              <div class="form-group">
-                <mat-form-field class="w-100">
-                  <mat-label>Alimentación</mat-label>
-                  <input matInput formControlName="alimentacion">
-                </mat-form-field>
-              </div>
-              <div class="form-group">
-                <mat-form-field class="w-100">
-                  <mat-label>Color</mat-label>
-                  <input matInput formControlName="color">
-                </mat-form-field>
-              </div>
-              <div class="form-group">
-                <mat-form-field class="w-100">
-                  <mat-label>Detalles</mat-label>
-                  <textarea matInput formControlName="detalles"></textarea>
-                </mat-form-field>
-              </div>
-              <div class="form-group">
-                <mat-form-field class="w-100">
-                  <mat-label>Raza ID</mat-label>
-                  <input type="number" matInput formControlName="razaId">
-                </mat-form-field>
-              </div>
-              <div class="form-group">
-                <button mat-raised-button color="primary" type="submit" [disabled]="mascotaForm.invalid">Registrar Mascota</button>
-              </div>
-            </form>
-          </mat-card-content>
-        </mat-card>
-      </div>
-      <div class="col-md-6">
-        <mat-card>
-          <mat-card-header>
-            <mat-card-title>Imagen de la Mascota</mat-card-title>
-          </mat-card-header>
-          <mat-card-content class="text-center">
-            <input type="file" id="fotoMascota" #fileInput (change)="onFileSelect($event)" hidden>
-            <button mat-stroked-button color="primary" (click)="openFilePicker()">Cargar Foto</button>
-            <div *ngIf="imageURL" class="mt-2">
-              <img [src]="imageURL" style="max-width: 100%; max-height: 300px;">
+  <div class="row">
+    <div class="col-md-6">
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>Registrar Mascota</mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <form [formGroup]="mascotaForm" (ngSubmit)="registrarMascota()">
+            <div class="form-group">
+              <mat-form-field class="w-100">
+                <mat-label>Nombre de la mascota</mat-label>
+                <input matInput formControlName="nombreMascota">
+              </mat-form-field>
             </div>
-          </mat-card-content>
-        </mat-card>
-      </div>
+            <div class="form-group">
+              <mat-form-field class="w-100">
+                <mat-label>Fecha de Nacimiento</mat-label>
+                <input matInput [matDatepicker]="picker" formControlName="fechaNacimiento">
+                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                <mat-datepicker #picker></mat-datepicker>
+              </mat-form-field>
+            </div>
+            <div class="form-group">
+              <mat-form-field class="w-100">
+                <mat-label>Peso (kg)</mat-label>
+                <input type="number" matInput formControlName="peso">
+              </mat-form-field>
+            </div>
+            <div class="form-group">
+              <mat-form-field class="w-100">
+                <mat-label>Alimentación</mat-label>
+                <input matInput formControlName="alimentacion">
+              </mat-form-field>
+            </div>
+            <div class="form-group">
+              <mat-form-field class="w-100">
+                <mat-label>Color</mat-label>
+                <input matInput formControlName="color">
+              </mat-form-field>
+            </div>
+            <div class="form-group">
+              <mat-form-field class="w-100">
+                <mat-label>Detalles</mat-label>
+                <textarea matInput formControlName="detalles"></textarea>
+              </mat-form-field>
+            </div>
+            <div class="form-group">
+              <mat-form-field class="w-100">
+                <mat-label>Raza</mat-label>
+                <input type="text" matInput formControlName="razaId" [matAutocomplete]="auto">
+                <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayRaza.bind(this)">
+                  <mat-option *ngFor="let raza of filteredRazas | async" [value]="raza">
+                    {{ raza.nombre }}
+                  </mat-option>
+                </mat-autocomplete>
+              </mat-form-field>
+            </div>
+            <div class="form-group">
+              <button mat-raised-button color="primary" type="submit" [disabled]="mascotaForm.invalid">Registrar Mascota</button>
+            </div>
+          </form>
+        </mat-card-content>
+      </mat-card>
+    </div>
+    <div class="col-md-6">
+      <mat-card>
+        <mat-card-header>
+          <mat-card-title>Imagen de la Mascota</mat-card-title>
+        </mat-card-header>
+        <mat-card-content class="text-center">
+          <input type="file" id="fotoMascota" #fileInput (change)="onFileSelect($event)" hidden>
+          <button mat-stroked-button color="primary" (click)="openFilePicker()">Cargar Foto</button>
+          <div *ngIf="imageURL" class="mt-2">
+            <img [src]="imageURL" style="max-width: 100%; max-height: 300px;">
+          </div>
+        </mat-card-content>
+      </mat-card>
     </div>
   </div>
-  
+</div>
