--- a/src/app/intranet/calendario/calendario.component.html
+++ b/src/app/intranet/calendario/calendario.component.html
@@ -1,40 +1,53 @@
-<div class='demo-app'>
-  <div class='demo-app-sidebar'>
-    <div class='demo-app-sidebar-section'>
-      <h2>Instrucciones</h2>
-      <ul>
-        <li>Seleccione las fechas y se le pedirá que cree un nuevo evento</li>
-        <li>Eventos de arrastrar, soltar y redimensionar</li>
-        <li>Haz clic en un evento para eliminarlo</li>
-      </ul>
-    </div>
-    <div class='demo-app-sidebar-section'>
-      <label>
-        <input
-          type='checkbox'
-          [checked]='calendarOptions.weekends'
-          (change)='handleWeekendsToggle()'
-        />
-        alternar fines de semana
-      </label>
-    </div>
-    <div class='demo-app-sidebar-section'>
-      <h2>Todos los eventos ({{currentEvents.length}})</h2>
-      <ul>
-        <li *ngFor='let event of currentEvents'>
-          <b>{{event.startStr}}</b>
-          <i>{{event.title}}</i>
-        </li>
-      </ul>
-    </div>
-  </div>
-
-  <div class='demo-app-main'>
-    <full-calendar *ngIf='calendarVisible' [options]='calendarOptions'>
-      <ng-template #eventContent let-arg>
-        <b>{{ arg.timeText }}</b>
-        <i>{{ arg.event.title }}</i>
-      </ng-template>
-    </full-calendar>
-  </div>
+<div class="demo-app">
+  <mat-sidenav-container class="sidenav-container">
+    <mat-sidenav
+      #sidenav
+      class="sidenav"
+      mode="over"
+      [opened]="isExpanded"
+      (closedStart)="isExpanded = false"
+    >
+      <div class="sidenav-content">
+        <h2>Instrucciones</h2>
+        <ul>
+          <li>Seleccione las fechas y se le pedirá que cree un nuevo evento</li>
+          <li>Eventos de arrastrar, soltar y redimensionar</li>
+          <li>Haz clic en un evento para eliminarlo</li>
+        </ul>
+        <label>
+          <input
+            type="checkbox"
+            [checked]="calendarOptions.weekends"
+            (change)="handleWeekendsToggle()"
+          />
+          alternar fines de semana
+        </label>
+        <h2>Todos los eventos ({{ currentEvents.length }})</h2>
+        <ul>
+          <li *ngFor="let event of currentEvents">
+            <b>{{ event.startStr }}</b>
+            <i>{{ event.title }}</i>
+          </li>
+        </ul>
+      </div>
+    </mat-sidenav>
+    <mat-sidenav-content>
+      <mat-toolbar>
+        <button mat-icon-button (click)="toggleSidenav()">
+          <mat-icon>menu</mat-icon>
+        </button>
+        <span>Tablero</span>
+      </mat-toolbar>
+      <div class="main-content">
+        <div class="demo-app-main">
+          <full-calendar *ngIf="calendarVisible" [options]="calendarOptions">
+            <ng-template #eventContent let-arg>
+              <b>{{ arg.timeText }}</b>
+              <i>{{ arg.event.title }}</i>
+            </ng-template>
+          </full-calendar>
+        </div>
+      </div>
+    </mat-sidenav-content>
+  </mat-sidenav-container>
 </div>
