complementos registro en evento

--- a/src/app/intranet/event-modal/event-modal.component.html
+++ b/src/app/intranet/event-modal/event-modal.component.html
@@ -35,6 +35,7 @@
       <mat-label>Fecha</mat-label>
       <input matInput formControlName="fecha" [disabled]="true">
     </mat-form-field>
+    <button mat-raised-button color="primary" (click)="onAddComplement()">Agregar Complemento</button>
   </form>
 </div>
 <div mat-dialog-actions>
