Update example landing home.component.html

--- a/src/app/public/home/home.component.html
+++ b/src/app/public/home/home.component.html
@@ -8,8 +8,8 @@
         </div>
         <h1>Tu amigo es <br>Nuestra Prioridad</h1>
         <div class="buttons">
-            <button>Vaccine Scheduling</button>
-            <button>Vaccine Stercolling</button>
+            <button>Sobre nosotros</button>
+            <button>Conoce mas</button>
         </div>
     </section>
     <div class="dog-image">
